# climate-action-heating-emissions

./: .env.feature_template  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.Kaniko  README.START.md  README.md  pyproject.toml
.gitlab/: renovate.json
heating_emissions/: plugin.py
heating_emissions/components/: census_data.py  gridded_emissions_artifact.py  histogram_artifacts.py  line_artifacts.py  utils.py
heating_emissions/components/temporal_downscale/: documentation.md  era5_data.py  temporal_estimation.py  temporal_utils.py
heating_emissions/components/temporal_downscale/demand_ninja/: __init__.py  requirements.txt  setup.py
heating_emissions/components/temporal_downscale/demand_ninja/demand_ninja/: core.py  util.py
heating_emissions/core/: info.py  input.py  operator_worker.py  settings.py
plugin_blueprint/: plugin.py
plugin_blueprint/core/: info.py  input.py  operator_worker.py
resources/: aoi-template.geojson  germany_bkg_boundaries.json  germany_buffered_boundaries.geojson  germany_buffered_boundaries.json  methodology.md  purpose.md
resources/locales/: messages.pot  methodology.pot  purpose.pot
resources/locales/de/: methodology.md  purpose.md
resources/locales/de/LC_MESSAGES/: messages.po  methodology.po  purpose.po
resources/locales/en/: methodology.md  purpose.md
resources/test/: Hamburg_boundary.geojson  census_de_population.csv  census_de_residential_buildings_by_year.csv  census_de_residential_heating_sources.csv  census_de_residential_living_space.csv  census_grid.geojson
resources/test/temporal_downscale/: census_data_heidelberg.gpkg  hourly_demand_2022-1_heidelberg.csv  monthly_emission_heidelberg.gpkg
test/: conftest.py
test/components/: test_census_data.py  test_gridded_emisions_artifacts.py  test_gridded_emissions_artifact.py  test_histograms.py  test_temporal_downscale.py  test_utils.py
test/core/: test_operator_worker.py
test/resources/: create_db_tables.sql
