[tool.poetry]
name = "heating-emissions"
version = "0.0.1"
description = "This indicator computes annual carbon dioxide emissions from residential space heating in an area of interest within Germany"
authors = ["Sebastian Block <sebastian.block@heigit.org>", "Veit Ulrich <veit.ulrich@heigit.org>", "Rizwan Khan <Rizwan.Khan@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = { git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.3.1" }
pydantic = "^2.8.2"
rioxarray = "^0.18.1"
rasterio = "^1.4.3"
matplotlib = "^3.10.0"
sqlalchemy = "^2.0.40"
geoalchemy2 = "^0.17.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
