[project]
name = "heating-emissions"
version = "2.0.0"
description = "This indicator computes annual carbon dioxide emissions from residential space heating in an area of interest within Germany"
authors = [
    { name = "Sebastian Block", email = "sebastian.block@heigit.org" },
    { name = "Veit Ulrich", email = "veit.ulrich@heigit.org" },
    { name = "Rizwan Khan", email = "Rizwan.Khan@heigit.org" },
]
readme = "README.md"

requires-python = ">=3.13.5,<3.14"
dependencies = [
    "climatoology @ git+https://gitlab.heigit.org/climate-action/climatoology.git@7.0.0",
    "pydantic (>=2.8.2,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "rioxarray (>=0.18.1,<1.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "geoalchemy2 (>=0.17.1,<1.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "cdsapi (>=0.7.7,<1.0.0)",
    "netCDF4 (>=1.7.3,<2.0.0)",
    "ecmwf-datastores-client (>=0.4.1,<1.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)"
]

[project.urls]
repository = "https://gitlab.heigit.org/climate-action/plugins/heating-emissions"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-postgresql = "^7.0.2"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120
exclude = ["heating_emissions/components/temporal_downscale/demand_ninja"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*" , "heating_emissions/core/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
